samples/_failures_safe/1761139856_506035_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f2aba27.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_1f2aba27.c:170:9: error: expected ‘:’ or ‘...’ at end of input
  170 |         case TOKEN_EOF
      |         ^~~~
./samples/SAFE/__tmp_1f2aba27.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1f2aba27.c:170:9: error: expected declaration or statement at end of input
